k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
  namespace: fraud
spec:
  selector:
    app: fraud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
