k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-ingress
  namespace: fraud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fraud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fraud-service
                port:
                  number: 80
